Fix minor spacing issue in curator inbox pagination

--- a/imports/stylesheets/tables.import.styl
+++ b/imports/stylesheets/tables.import.styl
@@ -86,7 +86,7 @@
     display none
   .reactive-table-navigation
     +above(3)
-      padding .5em 15px
+      padding .5em 25px
 
 .reactive-table-navigation
   padding 1em .5em .9em .5em
